# barlus_underwater_camera

./: .dockerignore  .gitignore  README.md
.devcontainer/: Dockerfile
.devcontainer/nouveau/: devcontainer.json
.devcontainer/nvidia/: devcontainer.json
.github/workflows/: docker.yml  format.yml
barlus_fiducial_detection/: package.xml  setup.cfg  setup.py
barlus_fiducial_detection/barlus_fiducial_detection/: aruco_detector.py  aruco_detector_parameters.yaml  fiducial_detection.py
barlus_gstreamer_proxy/: CMakeLists.txt  package.xml  setup.py
barlus_gstreamer_proxy/barlus_gstreamer_proxy/: gstreamer_proxy.py  gstreamer_proxy_parameters.yaml
barlus_gstreamer_proxy/config/: camera_info.yaml  camera_info_underwater.yaml  gstreamer_proxy.yaml
barlus_gstreamer_proxy/include/barlus_gstreamer_proxy/: gstreamer_proxy.hpp
barlus_gstreamer_proxy/launch/: gstreamer_proxy.launch.py
barlus_gstreamer_proxy/src/: gstreamer_proxy.cpp  gstreamer_proxy_parameters.yaml
barlus_gstreamer_proxy_original/: package.xml  setup.cfg  setup.py
barlus_gstreamer_proxy_original/barlus_gstreamer_proxy/: gstreamer_proxy.py  gstreamer_proxy_parameters.yaml
barlus_gstreamer_proxy_original/config/: gstreamer_proxy.yaml
barlus_gstreamer_proxy_original/launch/: gstreamer_proxy.launch.yaml
barlus_image_pipeline/: CMakeLists.txt  README.md  package.xml
barlus_image_pipeline/config/: camera_info.yaml  image_proxy.yaml  track_markers.yaml
barlus_image_pipeline/include/barlus_image_pipeline/: image_proxy.hpp  track_markers.hpp
barlus_image_pipeline/launch/: image_proxy.launch.py  track_markers.launch.py
barlus_image_pipeline/src/: common.cpp  common.hpp  image_proxy.cpp  image_proxy_parameters.yaml  track_markers.cpp  track_markers_parameters.yaml
compose/mediamtx/: docker-compose.yaml  mediamtx.yml
example_pkg/: package.xml
libbarlus/: CMakeLists.txt  package.xml
libbarlus/include/libbarlus/: camera.hpp
libbarlus/src/: camera.cpp
