<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>barlus_fiducial_detection</name>
  <version>0.0.1</version>
  <description>ROS 2 nodes used to detect fiducial markers in a Barlus camera stream</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/barlus_underwater_camera.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/barlus_underwater_camera/issues</url>

  <author>Evan Palmer</author>

  <exec_depend>tf_transformations</exec_depend>

  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>python3-scipy</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
