<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>barlus_image_pipeline</name>
  <version>0.0.1</version>
  <description>Nodes used to process a stream from a Barlus underwater camera</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/Robotic-Decision-Making-Lab/barlus_underwater_camera.git</url>
  <url type="bugtracker">https://github.com/Robotic-Decision-Making-Lab/barlus_underwater_camera/issues</url>

  <author>Evan Palmer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>generate_parameter_library</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_pipeline</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
